--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/homefragmentpage"
+
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".mainfragment.HomeFragment">
-
     <LinearLayout
         android:scrollbars="none"
-        android:background="@color/lightgreyanedot"
+        android:background="@color/white"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
@@ -17,10 +17,22 @@
             android:elevation="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
+                <TextView
+                    android:id="@+id/txtNotifikasi"
+                    android:padding="5dp"
+                    android:background="@color/lightgreyanedot"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Ada notif baru"
+                    android:gravity="center"
+                    android:textStyle="bold"
+                    android:textSize="15sp"
+                    android:textColor="@color/blueanedot"/>
                 <TextView
                     android:id="@+id/txtNama"
                     android:layout_marginTop="20dp"
@@ -55,40 +67,41 @@
                     android:background="@color/white"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
-                    <TextView
-                        android:textSize="15sp"
-                        android:textColor="@color/blueanedot"
-                        android:layout_marginHorizontal="20dp"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Daftar Semua Form Permintaan"/>
+
                 </LinearLayout>
+
             </LinearLayout>
-
-
         </androidx.cardview.widget.CardView>
         <LinearLayout
+            android:layout_marginTop="50dp"
+            android:background="@color/white"
             android:layout_width="match_parent"
-            android:orientation="vertical"
             android:layout_height="wrap_content">
-
-            <ImageView
-                android:layout_marginHorizontal="5dp"
-                android:backgroundTint="@color/white"
-                android:background="@color/white"
+            <TextView
+                android:id="@+id/txtNewnotif"
+                android:layout_marginHorizontal="20dp"
+                android:textColor="@color/blueanedot"
+                android:textStyle="bold"
+                android:gravity="left"
+                android:textSize="35dp"
                 android:layout_width="match_parent"
-                android:layout_height="5dp"
-                android:src="@drawable/dotted_line"
-                android:layerType="software" />
-            <androidx.recyclerview.widget.RecyclerView
-                android:layout_marginHorizontal="5dp"
-                android:id="@+id/rv_listForm"
-                android:orientation="vertical"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_height="wrap_content"
+                android:text="Hai Lodie, anda mempunyai ticket baru !"/>
         </LinearLayout>
-
-
+        <LinearLayout
+            android:background="@color/white"
+            android:layout_width="match_parent"
+            android:gravity="center"
+            android:layout_gravity="center_vertical"
+            android:layout_height="match_parent">
+            <com.airbnb.lottie.LottieAnimationView
+                android:layout_gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="400dp"
+                app:lottie_rawRes="@raw/plane"
+                app:lottie_autoPlay="true"
+                app:lottie_loop="true"/>
+        </LinearLayout>
     </LinearLayout>
 
 </FrameLayout>
