--- a/app/src/main/res/layout/modal_detailform.xml
+++ b/app/src/main/res/layout/modal_detailform.xml
@@ -324,6 +324,57 @@
                         android:text=": Menunggu Konfirmasi"
                         android:gravity="left"/>
                 </LinearLayout>
+                <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+                        <TextView
+                            android:textSize="12sp"
+                            android:layout_marginLeft="10dp"
+                            android:layout_weight="1"
+                            android:layout_marginVertical="10dp"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:textColor="@color/blueanedot"
+                            android:text="Dibuat pada"
+                            android:gravity="left"/>
+                        <TextView
+                            android:id="@+id/txtCreateat"
+                            android:textSize="12sp"
+                            android:layout_weight="1"
+                            android:layout_marginVertical="10dp"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:textColor="@color/blueanedot"
+                            android:text=": 0000-00-00 00:00:00"
+                            android:gravity="left"/>
+                </LinearLayout>
+                <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+                        <TextView
+                            android:id="@+id/txtDesc"
+                            android:textSize="12sp"
+                            android:layout_marginLeft="10dp"
+                            android:layout_weight="1"
+                            android:layout_marginVertical="10dp"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:textColor="@color/blueanedot"
+                            android:text="Dekripsi "
+                            android:gravity="left"/>
+                        <TextView
+                            android:id="@+id/txtDescription"
+                            android:textSize="12sp"
+                            android:layout_weight="1"
+                            android:layout_marginVertical="10dp"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:textColor="@color/blueanedot"
+                            android:text=" - "
+                            android:gravity="left"/>
+                    </LinearLayout>
             </LinearLayout>
 
             </ScrollView>
