--- a/app/src/main/res/menu/menu_search.xml
+++ b/app/src/main/res/menu/menu_search.xml
@@ -4,9 +4,7 @@
         <item
             android:title="Search"
             android:iconTint="@color/blueanedot"
-
             android:icon="@drawable/ic_baseline_search_24"
-            android:id="@+id/search"
-            app:showAsAction="ifRoom|collapseActionView"
-            app:actionViewClass="androidx.appcompat.widget.SearchView"/>
+            app:showAsAction="ifRoom"
+            android:id="@+id/search"/>
 </menu>
